Bindings/NIFToolset.Native/NIF.Native.Animation.h

typedef struct NIF_TextKeyDesc
{
	float time;
	const char* text;
} NIF_TextKeyDesc;
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_SequenceData_SetCycleType(NIF_SequenceDataHandle sequenceData, int cycleType);
NIFTOOLSET_NATIVE_ENTRY float NIF_Animation_SequenceData_GetFrequency(NIF_SequenceDataHandle sequenceData);
NIFTOOLSET_NATIVE_ENTRY void NIF_Animation_SequenceData_SetFrequency(NIF_SequenceDataHandle sequenceData, float frequency);
NIFTOOLSET_NATIVE_ENTRY NIF_ObjectHandle NIF_Animation_SequenceData_AsObject(NIF_SequenceDataHandle sequenceData);
NIFTOOLSET_NATIVE_ENTRY void NIF_Animation_Sequence_Destroy(NIF_ControllerSequenceHandle sequence);
NIFTOOLSET_NATIVE_ENTRY const char* NIF_Animation_Sequence_GetName(NIF_ControllerSequenceHandle sequence);
NIFTOOLSET_NATIVE_ENTRY unsigned int NIF_Animation_Sequence_GetActivationId(NIF_ControllerSequenceHandle sequence);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_Sequence_GetState(NIF_ControllerSequenceHandle sequence);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_Sequence_IsAdditiveBlend(NIF_ControllerSequenceHandle sequence);
NIFTOOLSET_NATIVE_ENTRY float NIF_Animation_Sequence_GetOffset(NIF_ControllerSequenceHandle sequence);
NIFTOOLSET_NATIVE_ENTRY void NIF_Animation_Sequence_SetOffset(NIF_ControllerSequenceHandle sequence, float offset);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_Sequence_GetPriority(NIF_ControllerSequenceHandle sequence);
NIFTOOLSET_NATIVE_ENTRY float NIF_Animation_Sequence_GetWeight(NIF_ControllerSequenceHandle sequence);
NIFTOOLSET_NATIVE_ENTRY void NIF_Animation_Sequence_SetWeight(NIF_ControllerSequenceHandle sequence, float weight);
NIFTOOLSET_NATIVE_ENTRY float NIF_Animation_Sequence_GetDuration(NIF_ControllerSequenceHandle sequence);
NIFTOOLSET_NATIVE_ENTRY float NIF_Animation_Sequence_GetDurationDivFreq(NIF_ControllerSequenceHandle sequence);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_Sequence_GetCycleType(NIF_ControllerSequenceHandle sequence);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_Sequence_SetCycleType(NIF_ControllerSequenceHandle sequence, int cycleType);
NIFTOOLSET_NATIVE_ENTRY float NIF_Animation_Sequence_GetFrequency(NIF_ControllerSequenceHandle sequence);
NIFTOOLSET_NATIVE_ENTRY void NIF_Animation_Sequence_SetFrequency(NIF_ControllerSequenceHandle sequence, float frequency);
NIFTOOLSET_NATIVE_ENTRY float NIF_Animation_Sequence_TimeDivFreq(NIF_ControllerSequenceHandle sequence, float time);
NIFTOOLSET_NATIVE_ENTRY float NIF_Animation_Sequence_TimeMultFreq(NIF_ControllerSequenceHandle sequence, float time);
NIFTOOLSET_NATIVE_ENTRY float NIF_Animation_Sequence_GetLastTime(NIF_ControllerSequenceHandle sequence);
NIFTOOLSET_NATIVE_ENTRY float NIF_Animation_Sequence_GetLastScaledTime(NIF_ControllerSequenceHandle sequence);
NIFTOOLSET_NATIVE_ENTRY float NIF_Animation_Sequence_GetSpinnerScaledWeight(NIF_ControllerSequenceHandle sequence);
NIFTOOLSET_NATIVE_ENTRY float NIF_Animation_Sequence_GetEaseSpinner(NIF_ControllerSequenceHandle sequence);
NIFTOOLSET_NATIVE_ENTRY float NIF_Animation_Sequence_GetEaseEndTime(NIF_ControllerSequenceHandle sequence);
NIFTOOLSET_NATIVE_ENTRY float NIF_Animation_Sequence_GetDestFrame(NIF_ControllerSequenceHandle sequence);
NIFTOOLSET_NATIVE_ENTRY void NIF_Animation_Sequence_Reset(NIF_ControllerSequenceHandle sequence);
NIFTOOLSET_NATIVE_ENTRY float NIF_Animation_Sequence_GetKeyTime(NIF_ControllerSequenceHandle sequence, const char* textKey);
NIFTOOLSET_NATIVE_ENTRY float NIF_Animation_Sequence_GetTimeAt(NIF_ControllerSequenceHandle sequence, const char* textKey, float currentTime);
NIFTOOLSET_NATIVE_ENTRY unsigned int NIF_Animation_Sequence_GetEvaluatorCount(NIF_ControllerSequenceHandle sequence);
NIFTOOLSET_NATIVE_ENTRY NIF_TextKeyExtraDataHandle NIF_Animation_Sequence_GetTextKeys(NIF_ControllerSequenceHandle sequence);
NIFTOOLSET_NATIVE_ENTRY NIF_ControllerSequenceHandle NIF_Animation_Sequence_GetTimeSyncSequence(NIF_ControllerSequenceHandle sequence);
NIFTOOLSET_NATIVE_ENTRY NIF_ObjectHandle NIF_Animation_Sequence_AsObject(NIF_ControllerSequenceHandle sequence);
NIFTOOLSET_NATIVE_ENTRY void NIF_Animation_TextKeys_Destroy(NIF_TextKeyExtraDataHandle textKeys);
NIFTOOLSET_NATIVE_ENTRY unsigned int NIF_Animation_TextKeys_GetCount(NIF_TextKeyExtraDataHandle textKeys);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_TextKeys_GetAt(NIF_TextKeyExtraDataHandle textKeys, unsigned int index, NIF_TextKeyDesc* outKey);
NIFTOOLSET_NATIVE_ENTRY NIF_ObjectHandle NIF_Animation_TextKeys_AsObject(NIF_TextKeyExtraDataHandle textKeys);