Bindings/NIFToolset.Managed/NativeMethods.cs

    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_SequenceData_SetCycleType(SafeSequenceDataHandle sequenceData, int cycleType);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern float NIF_Animation_SequenceData_GetFrequency(SafeSequenceDataHandle sequenceData);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_Animation_SequenceData_SetFrequency(SafeSequenceDataHandle sequenceData, float frequency);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeObjectHandle NIF_Animation_SequenceData_AsObject(SafeSequenceDataHandle sequenceData);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    internal static extern void NIF_Animation_Sequence_Destroy(nint handle);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern nint NIF_Animation_Sequence_GetName(SafeControllerSequenceHandle sequence);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_Animation_Sequence_GetActivationId(SafeControllerSequenceHandle sequence);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_Sequence_GetState(SafeControllerSequenceHandle sequence);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_Sequence_IsAdditiveBlend(SafeControllerSequenceHandle sequence);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern float NIF_Animation_Sequence_GetOffset(SafeControllerSequenceHandle sequence);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_Animation_Sequence_SetOffset(SafeControllerSequenceHandle sequence, float offset);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_Sequence_GetPriority(SafeControllerSequenceHandle sequence);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern float NIF_Animation_Sequence_GetWeight(SafeControllerSequenceHandle sequence);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_Animation_Sequence_SetWeight(SafeControllerSequenceHandle sequence, float weight);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern float NIF_Animation_Sequence_GetDuration(SafeControllerSequenceHandle sequence);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern float NIF_Animation_Sequence_GetDurationDivFreq(SafeControllerSequenceHandle sequence);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_Sequence_GetCycleType(SafeControllerSequenceHandle sequence);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_Sequence_SetCycleType(SafeControllerSequenceHandle sequence, int cycleType);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern float NIF_Animation_Sequence_GetFrequency(SafeControllerSequenceHandle sequence);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_Animation_Sequence_SetFrequency(SafeControllerSequenceHandle sequence, float frequency);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern float NIF_Animation_Sequence_TimeDivFreq(SafeControllerSequenceHandle sequence, float time);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern float NIF_Animation_Sequence_TimeMultFreq(SafeControllerSequenceHandle sequence, float time);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern float NIF_Animation_Sequence_GetLastTime(SafeControllerSequenceHandle sequence);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern float NIF_Animation_Sequence_GetLastScaledTime(SafeControllerSequenceHandle sequence);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern float NIF_Animation_Sequence_GetSpinnerScaledWeight(SafeControllerSequenceHandle sequence);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern float NIF_Animation_Sequence_GetEaseSpinner(SafeControllerSequenceHandle sequence);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern float NIF_Animation_Sequence_GetEaseEndTime(SafeControllerSequenceHandle sequence);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern float NIF_Animation_Sequence_GetDestFrame(SafeControllerSequenceHandle sequence);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_Animation_Sequence_Reset(SafeControllerSequenceHandle sequence);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern float NIF_Animation_Sequence_GetKeyTime(SafeControllerSequenceHandle sequence, [MarshalAs(UnmanagedType.LPUTF8Str)] string? textKey);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern float NIF_Animation_Sequence_GetTimeAt(SafeControllerSequenceHandle sequence, [MarshalAs(UnmanagedType.LPUTF8Str)] string? textKey, float currentTime);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_Animation_Sequence_GetEvaluatorCount(SafeControllerSequenceHandle sequence);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeTextKeyExtraDataHandle NIF_Animation_Sequence_GetTextKeys(SafeControllerSequenceHandle sequence);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeControllerSequenceHandle NIF_Animation_Sequence_GetTimeSyncSequence(SafeControllerSequenceHandle sequence);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeObjectHandle NIF_Animation_Sequence_AsObject(SafeControllerSequenceHandle sequence);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    internal static extern void NIF_Animation_TextKeys_Destroy(nint handle);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_Animation_TextKeys_GetCount(SafeTextKeyExtraDataHandle textKeys);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_TextKeys_GetAt(SafeTextKeyExtraDataHandle textKeys, uint index, NifTextKeyDesc* outKey);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeObjectHandle NIF_Animation_TextKeys_AsObject(SafeTextKeyExtraDataHandle textKeys);
    #endregion
